added style and colors to card

--- a/byte/public/main.css
+++ b/byte/public/main.css
@@ -1,5 +1,26 @@
-/* Body
 
-NavBar
+.bg-light {
+    background-color: #D0DE4B;
+    color: #000000;
+}
+body {
+    background-color:#FFFFFF;
+    
+}
 
-Card */
+.card {
+    background-color: #FFFFFF;
+    border: solid 5px #FD9B6E;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    margin: 100px auto 0;
+}
+
+h5.card-title {
+color: #F6422B;
+font-weight: bold;
+text-align: center;
+}
+
+.btn-danger {
+    float: right;
+}
