--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -117,7 +117,7 @@
 
                 <div class="col-sm-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/ofRaIp8.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="https://i.imgur.com/h3V3ArT.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Brogan Stich</h5>
                             <p class="card-text">"It's not a holiday? Whoops!"</p>
