edited size of pictures

--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://i.imgur.com/FlY5CGl.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.imgur.com/FlY5CGl.jpg?1" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Alex Connolly</h5>
                         <p class="card-text">"I am a hooman."</p>
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/VqZJQC1.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="https://i.imgur.com/VqZJQC1.jpg?1" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Crystal Ngo</h5>
                             <p class="card-text">"Let's plan this out."</p>
