put cards into grid and matched pic size

--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -60,144 +60,160 @@
 
     <div class="maincontainer">
 
-        <!-- <div class="MeetTeamCards"> -->
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/FlY5CGl.jpg?1" alt="Alex">
-                        <div class="card-body">
-                            <h5 class="card-title">Alex Connolly</h5>
-                            <p class="card-text">"I am a hooman."</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/63Yii7R.jpg" alt="AlexConnolly">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alex Connolly</h5>
+                                    <p class="card-text">"I am a hooman."</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
 
-                <!-- back content -->
-                <div class="back">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/FlY5CGl.jpg?1" alt="Card image cap">
-                        <div class="card-body">
-                            <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/alexrconnolly/"
-                                role="button">LinkedIn</a>
-                            <a class="btn btn-outline-primary github" href="https://github.com/AlexanderConnolly415"
-                                role="button">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-                    <div class="thefront">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="https://i.imgur.com/QZiZwHX.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Grace Houghton Andrizzi </h5>
-                                <p class="card-text">"Drive by nutting!"</p>
+                        <!-- back content -->
+                        <div class="back">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/63Yii7R.jpg" alt="AlexConnolly">
+                                <div class="card-body">
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/alexrconnolly/"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/AlexanderConnolly415"
+                                        role="button">GitHub</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="back">
-                    <!-- back content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/QZiZwHX.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/grace-houghton/"
-                                role="button">LinkedIn</a>
-                            <a class="btn btn-outline-primary github" href="https://github.com/adorkwithaspork" role="button">GitHub</a>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="thefront">
+                                <div class="card" style="width: 18rem;">
+                                    <img class="card-img-top" src="https://i.imgur.com/cJFRBjP.jpg" alt="GraceHoughtonAndrizzi">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Grace Houghton Andrizzi </h5>
+                                        <p class="card-text">"Anyone want some ice cream?"</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <!-- back content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/cJFRBjP.jpg" alt="GraceHoughtonAndrizzi">
+                                <div class="card-body">
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/grace-houghton/"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/adorkwithaspork"
+                                        role="button">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/SDtXLQy.jpg" alt="PeterMacdonnell">
+                                <div class="card-body">
+                                    <h5 class="card-title">Peter Macdonnell</h5>
+                                    <p class="card-text">"THICC LIFE"</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <!-- back content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/SDtXLQy.jpg" alt="PeterMacdonnell">
+                                <div class="card-body">
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/petermacdonnell/"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/PeterMacDonnell"
+                                        role="button">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/wwaDj9I.jpg" alt="CrystalNgo">
+                                <div class="card-body">
+                                    <h5 class="card-title">Crystal Ngo</h5>
+                                    <p class="card-text">"Let's plan this out."</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <!-- back content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/wwaDj9I.jpg" alt="CrystalNgo">
+                                <div class="card-body">
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/ngocrystal/"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/crystalngo88"
+                                        role="button">GitHub</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/er9gMyi.jpg" alt="BroganStich">
+                                <div class="card-body">
+                                    <h5 class="card-title">Brogan Stich</h5>
+                                    <p class="card-text">"It's not a holiday? Whoops!"</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <!-- back content -->
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://i.imgur.com/er9gMyi.jpg" alt="BroganStich">
+                                <div class="card-body">
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/brogan-stich-9a9697165"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/ad-victoriam-101"
+                                        role="button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/QIIqZTo.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Peter Macdonnell</h5>
-                            <p class="card-text">"THICC LIFE"</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="back">
-                    <!-- back content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/QIIqZTo.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/petermacdonnell/"
-                                role="button">LinkedIn</a>
-                            <a class="btn btn-outline-primary github" href="https://github.com/PeterMacDonnell" role="button">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/VqZJQC1.jpg?1" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Crystal Ngo</h5>
-                            <p class="card-text">"Let's plan this out."</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="back">
-                    <!-- back content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/VqZJQC1.jpg?1" alt="Card image cap">
-                        <div class="card-body">
-                            <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/ngocrystal/"
-                                role="button">LinkedIn</a>
-                            <a class="btn btn-outline-primary github" href="https://github.com/crystalngo88" role="button">GitHub</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/h3V3ArT.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Brogan Stich</h5>
-                            <p class="card-text">"It's not a holiday? Whoops!"</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="back">
-                    <!-- back content -->
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="https://i.imgur.com/h3V3ArT.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/brogan-stich-9a9697165"
-                                role="button">LinkedIn</a>
-                            <a class="btn btn-outline-primary github" href="https://github.com/ad-victoriam-101" role="button">GitHub</a>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
 
 
 </body>
