--- a/client/src/Components/MeetTeam/MeetTeam.css
+++ b/client/src/Components/MeetTeam/MeetTeam.css
@@ -5,15 +5,18 @@
 }
 body {
     background-color:#FFFFFF;
-    
+}
+
+.row {
+    margin-top: 30px;
 }
 
 .card {
     background-color: #FFFFFF;
     border: solid 5px #FD9B6E;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    margin: 20px;
-    /* float: left; */
+    margin: auto;
+    float: none;
 }
 
 h5.card-title {
@@ -37,7 +40,6 @@ text-align: center;
 
 .my-nav-font {
 color: black !important;    
-
 }
 
 .my-btn-yes{
