adjusted size of cards to be uniform

--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -66,7 +66,7 @@
                     <div class="flipper">
                         <div class="front">
                             <!-- front content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/63Yii7R.jpg" alt="AlexConnolly">
                                 <div class="card-body">
                                     <h5 class="card-title">Alex Connolly</h5>
@@ -77,9 +77,10 @@
 
                         <!-- back content -->
                         <div class="back">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/63Yii7R.jpg" alt="AlexConnolly">
                                 <div class="card-body">
+                                        <h5 class="card-title">Alex Connolly</h5>
                                     <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/alexrconnolly/"
                                         role="button">LinkedIn</a>
                                     <a class="btn btn-outline-primary github" href="https://github.com/AlexanderConnolly415"
@@ -97,7 +98,7 @@
                         <div class="front">
                             <!-- front content -->
                             <div class="thefront">
-                                <div class="card" style="width: 18rem;">
+                                    <div class="card" style="width: 18rem; height: 26rem;">
                                     <img class="card-img-top" src="https://i.imgur.com/cJFRBjP.jpg" alt="GraceHoughtonAndrizzi">
                                     <div class="card-body">
                                         <h5 class="card-title">Grace Houghton Andrizzi </h5>
@@ -108,9 +109,10 @@
                         </div>
                         <div class="back">
                             <!-- back content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/cJFRBjP.jpg" alt="GraceHoughtonAndrizzi">
                                 <div class="card-body">
+                                        <h5 class="card-title">Grace Houghton Andrizzi </h5>
                                     <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/grace-houghton/"
                                         role="button">LinkedIn</a>
                                     <a class="btn btn-outline-primary github" href="https://github.com/adorkwithaspork"
@@ -127,7 +129,7 @@
                     <div class="flipper">
                         <div class="front">
                             <!-- front content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/SDtXLQy.jpg" alt="PeterMacdonnell">
                                 <div class="card-body">
                                     <h5 class="card-title">Peter Macdonnell</h5>
@@ -137,9 +139,10 @@
                         </div>
                         <div class="back">
                             <!-- back content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/SDtXLQy.jpg" alt="PeterMacdonnell">
                                 <div class="card-body">
+                                        <h5 class="card-title">Peter Macdonnell</h5>
                                     <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/petermacdonnell/"
                                         role="button">LinkedIn</a>
                                     <a class="btn btn-outline-primary github" href="https://github.com/PeterMacDonnell"
@@ -159,7 +162,7 @@
                     <div class="flipper">
                         <div class="front">
                             <!-- front content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/wwaDj9I.jpg" alt="CrystalNgo">
                                 <div class="card-body">
                                     <h5 class="card-title">Crystal Ngo</h5>
@@ -169,9 +172,10 @@
                         </div>
                         <div class="back">
                             <!-- back content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/wwaDj9I.jpg" alt="CrystalNgo">
                                 <div class="card-body">
+                                        <h5 class="card-title">Crystal Ngo</h5>
                                     <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/ngocrystal/"
                                         role="button">LinkedIn</a>
                                     <a class="btn btn-outline-primary github" href="https://github.com/crystalngo88"
@@ -189,7 +193,7 @@
                     <div class="flipper">
                         <div class="front">
                             <!-- front content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/er9gMyi.jpg" alt="BroganStich">
                                 <div class="card-body">
                                     <h5 class="card-title">Brogan Stich</h5>
@@ -199,9 +203,10 @@
                         </div>
                         <div class="back">
                             <!-- back content -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 18rem; height: 26rem;">
                                 <img class="card-img-top" src="https://i.imgur.com/er9gMyi.jpg" alt="BroganStich">
                                 <div class="card-body">
+                                        <h5 class="card-title">Brogan Stich</h5>
                                     <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/brogan-stich-9a9697165"
                                         role="button">LinkedIn</a>
                                     <a class="btn btn-outline-primary github" href="https://github.com/ad-victoriam-101"
