added David card, no jsx

--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
                         <div class="front">
@@ -188,7 +188,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
                         <div class="front">
@@ -217,6 +217,37 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-sm-4">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- front content -->
+                            <div class="card" style="width: 18rem; height: 26rem;">
+                                <img class="card-img-top" src="https://d1qb2nb5cznatu.cloudfront.net/users/1423360-large?1519579626" alt="DavidHallinan">
+                                <div class="card-body">
+                                    <h5 class="card-title">David Hallinan</h5>
+                                    <p class="card-text">"Your backend is... fire."</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <!-- back content -->
+                            <div class="card" style="width: 18rem; height: 26rem;">
+                                <img class="card-img-top" src="https://d1qb2nb5cznatu.cloudfront.net/users/1423360-large?1519579626" alt="DavidHallinan">
+                                <div class="card-body">
+                                        <h5 class="card-title">David Hallinan</h5>
+                                    <a class="btn btn-outline-primary linkedin" href="https://www.linkedin.com/in/dhallinan"
+                                        role="button">LinkedIn</a>
+                                    <a class="btn btn-outline-primary github" href="https://github.com/BUMBALORD"
+                                        role="button">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
