--- a/client/src/Components/MeetTeam/MeetTeam.html
+++ b/client/src/Components/MeetTeam/MeetTeam.html
@@ -59,7 +59,7 @@
     </nav>
 
     <div class="maincontainer">
-
+<div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -247,7 +247,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         </div>
 
 
