--- a/client/src/Components/Choice/Choice.css
+++ b/client/src/Components/Choice/Choice.css
@@ -65,6 +65,8 @@ body {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
+	line-height: normal;
+	color: black;
 }
 img {
 	max-width: 100%;
@@ -147,12 +149,19 @@ body > .container {
 	color: #333;
 	text-decoration: none; 
 }
+
 .btn-block {
   display: block;
-  width: 100%;
+  width: 100%; 
 }
 
+.btn {
+	display: inline-block;
+}
 
+.no {
+	float: right;
+}
 /* Custom page CSS - iPad/Desktop  */
 
 @media (min-width: 768px) {
