--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -8,6 +8,8 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #b8b8b8;
+  background:"./images/leaves-pattern.png";
+  background-repeat: repeat-x;
 }
 
 a {
