--- a/client/public/main.css
+++ b/client/public/main.css
@@ -5,7 +5,8 @@
 }
 body {
     background-color:#FFFFFF;
-    
+    background:"./images/leaves-pattern.png";
+    background-repeat: repeat-x;
 }
 
 .card {
